refine the about page content and fix work cad gap issues

--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,11 @@ h2 {
     color: white;
 }
 
+/* h2,
+h3 {
+    font-family: "all-round-gothic", sans-serif;
+} */
+
 .display-1 {
     font-size: 4.5rem;
     font-weight: 700;
@@ -40,7 +45,7 @@ h2 {
 }
 
 .display-5 {
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-weight: bold;
 }
 
@@ -111,6 +116,10 @@ main a {
     font-size: 1.5rem;
     display: flex;
     gap: 32px;
+}
+
+.nav-link {
+    font-size: 1.2rem;
 }
 
 /* heading animation */
@@ -307,10 +316,11 @@ footer .social-media,
 
 .skills,
 .works {
-    padding: 5% 8%;
+    padding: 5%;
 }
 
 /* style the work section */
+
 .work-card {
     padding: 1rem;
     border-radius: 15px;
@@ -346,9 +356,10 @@ footer .social-media,
     object-fit: contain;
 }
 
-.about-content p {
+.about-content p,
+ul {
     padding-right: 5%;
-    color: rgb(112, 112, 112);
+    color: whitesmoke;
     font-size: 1.1rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
